--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <style>
-     #video-container {
+      #video-container {
         display: none;
       }
 
@@ -24,14 +24,12 @@
         right: 20px;
         cursor: pointer;
         color: white;
-      } 
+      }
       @media (max-width: 570px) {
         #video-container iframe {
           width: 100vw; /* Adjust the width for screens below 570 pixels */
         }
-
       }
-
     </style>
     <link
       rel="stylesheet"
@@ -72,7 +70,7 @@
     data-aos-delay="0"
   >
     <!-- preloader area start  -->
-    <div class="preloader" id="preloader">
+    <!-- <div class="preloader" id="preloader">
       <div class="preloader-inner">
         <div class="cube-wrapper">
           <div class="cube-folding">
@@ -84,7 +82,7 @@
           <span class="loading" data-name="Loading">Loading</span>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- preloader area end -->
 
     <!-- Navebar Area start -->
@@ -1764,14 +1762,15 @@
     </footer>
 
     <footer class="footer1">
-      <div class="legal">
+      <div class="f1">
         <p>
           © Copyright 2023.
           <a href="https://squadcube.io/"> Squadcube Solutions Pvt Ltd.</a>
           All Rights Reserved
         </p>
+      </div>
 
-        <div class="legal__links">
+        <div class="f2">
           <a href="./privacypolicy.html">
             <img
               class="img-fluid1 flag-svg"
@@ -1779,9 +1778,8 @@
               alt=""
           /></a>
 
-          <p><a href="./privacypolicy.html" id="pri">Privacy Policy</a></p>
+          <p><a href="./privacypolicy.html" style="padding-left: 5px;" >Privacy Policy</a></p>
         </div>
-      </div>
     </footer>
 
     <!-- Footer Section End -->
