--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       }
       @media (max-width: 570px) {
         #video-container iframe {
-          width: 100vw; /* Adjust the width for screens below 570 pixels */
+          width: 100vw;
         }
       }
     </style>
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="./assets/css/card.css" />
     <!-- bootstrap -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <!-- fontawesome -->
+    <!-- font-awesome -->
     <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
     <!-- animate -->
     <link rel="stylesheet" href="assets/css/animate.css" />
@@ -70,7 +70,7 @@
     data-aos-delay="0"
   >
     <!-- preloader area start  -->
-    <!-- <div class="preloader" id="preloader">
+    <div class="preloader" id="preloader">
       <div class="preloader-inner">
         <div class="cube-wrapper">
           <div class="cube-folding">
@@ -82,7 +82,7 @@
           <span class="loading" data-name="Loading">Loading</span>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- preloader area end -->
 
     <!-- Navebar Area start -->
@@ -1770,16 +1770,20 @@
         </p>
       </div>
 
-        <div class="f2">
-          <a href="./privacypolicy.html">
-            <img
-              class="img-fluid1 flag-svg"
-              src="./assets/images/sLogo.png"
-              alt=""
-          /></a>
+      <div class="f2">
+        <a href="./privacypolicy.html">
+          <img
+            class="img-fluid1 flag-svg"
+            src="./assets/images/sLogo.png"
+            alt=""
+        /></a>
 
-          <p><a href="./privacypolicy.html" style="padding-left: 5px;" >Privacy Policy</a></p>
-        </div>
+        <p>
+          <a href="./privacypolicy.html" style="padding-left: 5px"
+            >Privacy Policy</a
+          >
+        </p>
+      </div>
     </footer>
 
     <!-- Footer Section End -->
